--- a/experience.html
+++ b/experience.html
@@ -3,36 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Work Experience - Arifuzzaman Shaon</title>
+  <title>Work Experience - Md. Arifuzzaman Shaon</title>
   <style>
-    body { font-family:'Segoe UI', sans-serif; background:#0f2027; color:white; text-align:center; margin:0; padding:0; }
-    section { max-width:900px; margin:50px auto; background: rgba(255,255,255,0.1); border-radius:15px; padding:20px; text-align:left; }
-    h1, h2 { color:#00b4d8; }
-    ul { line-height:1.6; }
-    a.btn { display:inline-block; margin-top:20px; background-color:#00b4d8; color:white; padding:10px 20px; border-radius:25px; text-decoration:none; font-weight:bold; }
-    a.btn:hover { background-color:#0077b6; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+    }
+
+    header {
+      padding: 30px 20px 50px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+
+    header a.btn {
+      display: inline-block;
+      margin-top: 20px;
+      background-color: #00b4d8;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    header a.btn:hover {
+      background-color: #0077b6;
+    }
+
+    section {
+      max-width: 900px;
+      margin: 30px auto;
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      text-align: left;
+    }
+
+    h2 {
+      color: #00b4d8;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+
+    table, th, td {
+      border: 1px solid white;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
+
+    th {
+      background-color: rgba(255,255,255,0.2);
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 14px;
+      color: #ccc;
+    }
+
+    @media (max-width: 600px) {
+      header h1 { font-size: 24px; }
+      header a.btn { padding: 8px 16px; font-size: 14px; }
+      table th, table td { font-size: 14px; padding: 8px; }
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>💼 Work Experience -Arifuzzaman Shaon</h1>
-  <a href="index.html" class="btn">🏠 Back to Home</a>
-</header>
+  <header>
+    <h1>💼 Work Experience - Md. Arifuzzaman Shaon</h1>
+    <a href="index.html" class="btn">🏠 Back to Home</a>
+  </header>
 
-<section>
-  <h2>Experience Details</h2>
-  <ul>
-    <li>Contractual Employee Supervisor at ABID Enterprise (Dec 2016 – June 2025)
-      <br>Headquarters: Gazipur, Holding#432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702
-    </li>
-    <li>Welfare Officer at AMANN Bangladesh Ltd. (July 2025 – Present)
-      <br>Plot # RS 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur
-    </li>
-  </ul>
-</section>
+  <section>
+    <h2>Experience Details</h2>
+    <table>
+      <tr>
+        <th>Position</th>
+        <th>Company</th>
+        <th>Period</th>
+        <th>Headquarters / Address</th>
+      </tr>
+      <tr>
+        <td>Contractual Employee Supervisor</td>
+        <td>ABID Enterprise</td>
+        <td>Dec 2016 – June 2025</td>
+        <td>Gazipur, Holding#432, T&T Rd, Telipara, Gazipur City Corporation, Gazipur-1702</td>
+      </tr>
+      <tr>
+        <td>Welfare Officer</td>
+        <td>AMANN Bangladesh Ltd.</td>
+        <td>July 2025 – Present</td>
+        <td>Plot # RS 2497-98, Tapirbari, Tengra, Mawna, Sreepur, Gazipur</td>
+      </tr>
+    </table>
+  </section>
 
-<footer>© 2025 Arifuzzaman Shaon | All Rights Reserved</footer>
+  <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
 
 </body>
 </html>
